# html-tags

./: .gitignore  LICENSE  README.md  concise.py  demo.html  fromJupyter.py  pyproject.toml
__marimo__/session/: fromJupyter.py.json
arch0.1.25/__marimo__/session/: _init.py.json  d_extras.py.json  x_new.py.json
bk0.1.1/: a_tags.py
bk0.1.25/: c_dev.py
bk0.1.25/__marimo__/session/: _init.py.json
demos/: charts.py  components.py  erd.py  flashcards.html  flashcards.py  live_search.py  mind_map.html  mind_map.py
demos/__marimo__/session/: charts.py.json  components.py.json  flashcards.py.json  live_search.py.json  mind_map.py.json
docs/: c_tag.py  core.html  index.html  llms-full.txt  llms.txt  sse.html  svg.html
docs/wasm/: index.html
hsm/: _init.py  e_dsl.py
newtags/: a_tags.py  b_fiexes.py
newtags/__marimo__/session/: a_tags.py.json  b_fiexes.py.json
notebooks/: XX_acore.py  XX_benchmark.py  XX_core.py  XX_g_viz_mark.py  XX_h_viz_axis.py  XX_i_viz_chart.py  XX_speedup.py  _init.py  a_core.py  a_node.py  a_tag.py  a_tags.py  a_template.py  b_attrs.py  b_charts.py  b_render.py  b_sse.py  b_svg.py  c_dev.py  c_ns.py  c_svg.py  d_extras.py  d_render.py  demo.py  e_dsl.py  f_viz_scale.py  i_viz_chart.py  test.py  test_all.py  test_core.py
notebooks/__marimo__/session/: _init.py.json  a_core.py.json  a_html.py.json  a_html3.py.json  a_html_tags.py.json  a_node.py.json  a_tags.py.json  a_template.py.json  b_attrs.py.json  b_charts.py.json  b_enum.py.json  b_sse.py.json  b_test.py.json  c_ns.py.json  d_render.py.json  e_dsl.py.json  f_viz_scale.py.json  g_viz_mark.py.json  h_viz_axis.py.json  i_viz_chart.py.json  test.py.json  test_core.py.json  test_general.py.json  tests.py.json
old 4.3_notebooks/: _init.py  a_tags.py  b_charts.py  test_general.py
old 4.3_notebooks/__marimo__/session/: _init.py.json  a_core.py.json  a_tags.py.json  a_template.py.json  b_charts.py.json
src/html_tags/: __init__.py  attrs.py  charts.py  core.py  dev.py  dsl.py  extras.py  html.py  html_tags.py  node.py  ns.py  render.py  sse.py  svg.py  tag.py  tags.py  template.py  viz_axis.py  viz_chart.py  viz_mark.py  viz_scale.py
