[project]
name = "html-tags"
version = "0.0.11"
description = "concise html tag generation"
readme = "README.md"
authors = [
    { name = "Deufel", email = "MDeufel13@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
]

[project.urls]
Repository = "https://github.com/Deufel/html-tags"


[dependency-groups]
dev = [
    "marimo>=0.21.1",
    "marimo-dev>=0.3.2",
]

[tool.marimo-dev]
  renames = {dunder_ = "__", internal_ = "_"}


[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
