[project]
name = "html-tags"
version = "0.1.9"
description = "HTML/SVG generation for Python. Zero dependencies."
readme = "README.md"
authors = [
    { name = "Deufel", email = "MDeufel13@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

license = {text = "MIT"}  # or whatever license you use

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: HTML",
]

[project.urls]
  Repository = "https://github.com/Deufel/html-tags"
  Documentation = "https://deufel.github.io/html-tags/"
  Changes = "https://github.com/Deufel/html-tags/releases"


[dependency-groups]
dev = [
    "marimo>=0.21.1",
    "marimo-dev>=0.3.2",
    "mcp>=1.26.0",
]

[tool.marimo-dev]
  renames = {dunder_ = "__", internal_ = "_"}


[build-system]
requires = ["uv_build>=0.11,<0.12.0"]
build-backend = "uv_build"
