[project]
name = "html-tags"
version = "0.3.2"
description = "HTML/SVG generation via python functions."
readme = "README.md"
authors = [
    { name = "Deufel", email = "MDeufel13@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [

]

license = {text = "MIT"}  # or whatever license you use

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: HTML",
]

[project.urls]
  Repository = "https://github.com/Deufel/html-tags"
  Documentation = "https://deufel.github.io/html-tags/"
  Changes = "https://github.com/Deufel/html-tags/releases"


[dependency-groups]
dev = [
    "anthropic>=0.94.0",
    "pydantic-ai-slim>=1.80.0",
    "marimo>=0.21.1",
    "marimo-dev>=0.3.2",
    "mcp>=1.26.0",
    "pytest>=9.0.3",
]


[build-system]
requires = ["uv_build>=0.11,<0.12.0"]
build-backend = "uv_build"

[tool.marimo-dev]
nbs = "notebooks"                            # default
out = "src"                                  # default
docs = "docs"                                # default
skip_prefixes = ["XX_", "test_", "test"]   

[tool.marimo-dev.renames]
internal_ = "_"                              # internal_foo → _foo (private)
dunder_   = "__"                             # dunder_init  → __init__

